--- a/views/full_size_dashboard.erb
+++ b/views/full_size_dashboard.erb
@@ -6,7 +6,7 @@
 <% if @error %>
    <h2><%= @error %></h2>
 <% else %>
-<body style='background: black'>
+<body style='background: white'>
 <div class="container">
   <% span=12/@graph_columns %>
 <table>
