descrição do gráfico em popover

--- a/templates/template.graph.erb
+++ b/templates/template.graph.erb
@@ -4,7 +4,7 @@ version = "<%= version %>"
 title       "Respostas | <%= env %> <%= version %>" 
 vtitle      "respostas/s"
 area        :stacked
-description "Requests respondidos somente pelos backends"
+description "Requests enviados para <%= env %> <%= version %> respondidos pela app (non-cached) por status code"
 linewidth 2
 draw_null_as_zero true
 
