--- a/views/layout.erb
+++ b/views/layout.erb
@@ -35,20 +35,19 @@
                                 </ul>
                             </li>
                         <% end %>
-                        </ul>
-  			            <ul class="nav secondary-nav">
                             <li class="dropdown">
-                                <a href="#" class="dropdown-toggle">Experimente!</a>
+                                <a href="#" data-toggle="dropdown" class="dropdown-toggle">Experimente!
+                                    <b class="caret"></b>
+                                </a>
                                 <ul class="dropdown-menu">
                                     <li><a href="<%= @graphite_base %>">Graphite Browser</a></li>
                                     <% if @dashboard %>
-                                        <li class="divider"></li>
                                         <li><a href="<%= uri_to_print %>" target="_blank">Imprima!</a></li>
                                     <% end %> 
                                 </ul>
                             </li>
-			            </ul>
-                  <div class="pull-right" style="" class='nav input-append'>
+                        </ul>
+                  <div class="pull-right" style="margin-top: 4px;" class='nav input-append'>
                       <form id="form-search" name="dashboards" style="margin: 0;" class="form-search" method="get" action="<%= @prefix %>/search">
                       <div class="input-append">
                       <input class="span2 search-query" name="dashboard" type="text" placeholder="Dashboard..." data-provide="typeahead" data-items="10" data-source='<%= @search_elements.to_s %>' autocomplete="off" />
