--- a/templates/dash.yaml.erb
+++ b/templates/dash.yaml.erb
@@ -1,5 +1,5 @@
-:name: <%= app %>
-:description: <%= app %>
+:name: <%= app_name %>
+:description: <%= description %>
 :graph_properties: 
  :background_color: "FAFAFA"
  :foreground_color: "3A3A3A"
