--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" type="text/css" href="<%= @prefix %>/bootstrap/bootstrap.css">
-        <link rel="stylesheet" type="text/css" href="<%= @prefix %>/bootstrap/bootstrap.css">
         <link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.10.0/themes/smoothness/jquery-ui.css">
         <link rel="stylesheet" type="text/css" href="<%= @prefix %>/js/jquery-ui-timepicker-addon.css">
+        <link rel="stylesheet" type="text/css" href="<%= @prefix %>/css/custom.css">
         <script src="<%= @prefix %>/js/jquery-1.7.2.min.js"></script>
         <script src="<%= @prefix %>/js/jquery-ui-1.10.0.custom.min.js"></script>
         <script src="<%= @prefix %>/js/jquery-ui-timepicker-addon.js"></script>
