--- a/templates/dash.yaml.erb
+++ b/templates/dash.yaml.erb
@@ -1,7 +1,7 @@
 :name: <%= app_name %>
 :description: <%= description %>
 :graph_properties: 
- :background_color: "FAFAFA"
+ :background_color: white
  :foreground_color: "3A3A3A"
  :vertical_mark_color: "#330000"
  :environment: <%= envs %>
