--- a/views/graph.erb
+++ b/views/graph.erb
@@ -3,7 +3,9 @@
   <%qp="?#{request.env['rack.request.query_string']}" %>
   <a href='<%= [@prefix, params[:category], @params[:dash], 'details', graph[:name], qp].join "/" %>' class="graph">
 <% end %>
-<img style="margin: 0 auto;" src='<%= [@dashboard.graphite_render, graph[:graphite][:url]].join "?" %>' title="<%= graph[:graphite][:title] %>" data-content="<%= graph[:graphite][:description] %>">
+<img style="margin: 0 auto;" src='<%= [@dashboard.graphite_render, graph[:graphite][:url]].join "?" %>' title="<%= graph[:graphite][:title] %>" data-content="<%= graph[:graphite][:description] %>"
+class="img-polaroid"
+>
 <% unless omit_link %>
   </a>
 <% end %>
