Reorganizado assets e partials

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -17,6 +17,7 @@
         <script src="<%= @prefix %>/js/bootstrap-tooltip.js"></script>
         <script src="<%= @prefix %>/js/bootstrap-popover.js"></script>
         <script src="<%= @prefix %>/js/bootstrap-typeahead.js"></script>
+        <script src="<%= @prefix %>/js/custom.js"></script>
         <title><%= @dash_title %></title>
     </head>
     <body>
