--- a/views/dashboard.erb
+++ b/views/dashboard.erb
@@ -1,12 +1,6 @@
 <% unless @error %>
 <div class="row-fluid">
-  <div class="span2">
-  </div>
-  <div class="span6">
-   <h1><%= @dashboard.name %>&nbsp;<small><%= @dashboard.description %></small></h1>
-  </div>
-  <div class="span4">
-  </div>
+  <%= erb :_dashboard_header %>
 </div>
 <div class="row-fluid">
   <div class="span2">
@@ -33,13 +27,4 @@
 <% end %>
 </tr>
 </table>
-
-<script>
-    $(function () {
-      $(".graph img")
-        .popover({
-          placement: "bottom", delay: 200
-        })
-    })
-</script>
 <% end %>
