--- a/views/detailed_dashboard.erb
+++ b/views/detailed_dashboard.erb
@@ -1,10 +1,6 @@
 <% unless @error %>
 <div class="row-fluid">
-  <div class="span2">
-  </div>
-  <div class="span6">
-<h1><%= @dashboard.name %>&nbsp;<small><%= @dashboard.description %></small></h1>
-  </div>
+<%= erb :_dashboard_header %>
 </div>
   
 <% span=12/@graph_columns %>
@@ -23,12 +19,4 @@
 <% end %>
 </tr>
 </table>
-<script>
-    $(function () {
-      $(".graph img")
-        .popover({
-          placement: "bottom", delay: 1000
-        })
-    })
-</script>
 <% end %>
